static/BaseStyle.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

:root {
    --bgcolor: #194a50;
    --nav-bg-color: #0c2431;
    --color: #d37556;
    --other-color: #d8a28c;
    --other-color-2: #e1dad2;

    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    background-color: var(--bgcolor);
    color: var(--color);
    font-family: Inter;
}

*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

/* NAVBAR ------------------------------------------------------------------------------------------------------- */

nav {
    position: sticky;
    top: 0;
    display: grid;
    grid-template-columns: 0.5rem repeat(6, 1fr) 0.5rem;
    grid-template-areas: "space logo nav nav nav search search";
    grid-gap: 0.5rem;
    height: 2rem;
    min-height: 50px;
    background-color: var(--nav-bg-color);
    border: 0.2rem outset #003b5b66;
    border-radius: 6px;
    font-weight: bolder;
}

.logo{
    grid-area: logo;
    justify-self: center;
    align-self: center;
}

.nav{
    grid-area: nav;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    width: 50%;
    align-self: center;
    justify-self: center;
    list-style: none;
}
    .nav li{
        width: 100%;
        justify-self: center;
        text-align: center;
    }
    .nav li a{
        display: block;
        width: 100%;
        text-decoration: none;
    }
    .nav li a:visited{
        color: var(--color);
    }
    .nav li a:hover{
        color: var(--other-color-2);
    }

.search{
    grid-area: search;
    justify-self: center;
    align-self: center;
}

nav input[type="text"] {
    padding-left: 0.2rem;
    border: 0.25rem inset #0c2431e6;
    border-radius: 5px;
    height: 1.5rem;
    min-height: 25px;
    margin: 5px;
}
    nav input[type="text"]:focus {
        outline: none;
    }

nav button {
    height: 1.4rem;
    min-height: 21px;
    min-width: 43px;
    background-color: #eccd00e6;
    border-color: #ffd900;
}

/* Generic Stuff ------------------------------------------------------------------------------------------------ */

.small-select {
    height: 1.4rem;
    width: 3rem;
    max-width: max-content;
    min-height: 21px;
}

.icon-default{
    width: 100%;
    border-radius: 0.33rem;
    justify-self: center;
    align-self: center;
}

/* -------------------------------------------------------------------------------------------------------------- */

.container {
    display: grid;
    grid-template-columns: 1fr;
    height: 90vh;
    max-height: min-content;
    font-size: 1rem;
}

.content {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(5, 1fr);
    height: 100%;
}

.match {
    overflow: auto;
    display: grid;
    width: 70%;
    margin: 0.1rem;
    font-size: 0.8rem;
    border: 0.15rem solid black;
    align-self: center;
    justify-self: center;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-areas: "match-data iconz stats players";
}
    .match-child{
        min-width: 100%;
        min-height: 100%;
    }
    .match-info{
        width: 100%;
        grid-area: match-data;
        display: grid;
        grid-template-areas: 
        "info" "info" "info";
    }
        .match-info-child{
            justify-self: center;
            align-self: center;
        }
    
    .player-icon{
        width: 100%;
        grid-area: iconz;
        display: grid;
        grid-template-columns: repeat(7, 1fr);
        grid-template-areas:
        "picon picon spell runes p-kda p-kda p-kda"
        "picon picon spell runes p-kda p-kda p-kda"
        "items items items items items items items";
    }
        .player-icon-child{
            width: 100%;
            align-self: center;
            padding: 0.1rem;
        }

        .champion-image{
            grid-area: picon;
            display: grid;
        }
        .summoner-spells{
            grid-area: spell;
            display: grid;
        }
            .summoner-spells-child{
                justify-self: center;
                padding: 0.1rem;
            }

        .items{
            grid-area: items;
            display: grid;
            grid-template-columns: repeat(7, 1fr);
        }
            .items-child{
                justify-self: center;
                padding: 0.1rem;
            }

        .kda{
            grid-area: p-kda;
            font-size: 1.5em;
            display: grid;
            grid-template-columns: 1fr;
        }
            .kda-child{
                justify-self: center;
            }

            .kda-full{
                align-self:end;
            }
            .kda-small{
                align-self:baseline;
            }
    
    .match-player-stats{
        width: 100%;
        grid-area: stats;
        display: grid;
        grid-template-columns: 1fr;
    }
        .match-player-stats-child{
            justify-self: center;
            align-self: center;
        }

    .participants{
        width: 100%;
        grid-area: players;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-areas: 
        "win lose"
    }
        .participants-child{
            justify-self: center;
            align-self: center;
            width: 100%;
            height: 100%;
        }

        .match-participants-win{
            grid-area: win;
            display: grid;
            grid-template-columns: 1fr;
        }
            .match-participants-win-child{
                justify-self: left;
                align-self: center;
            }
        
        .match-participants-lose{
            grid-area: lose;
            display: grid;
            grid-template-columns: 1fr;
        }
            .match-participants-lose-child{
                justify-self: left;
                align-self: center;
            }

